fix: change wording

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
                     <!-- Create Web Content Section -->
                     <section id="crear-contenido" class="section scrollspy">
-                        <h2 class="section-title"><i class="material-icons">devices</i>Crear contenido web con IA</h2>
+                        <h2 class="section-title"><i class="material-icons">devices</i>Crear contenido interactivo con IA</h2>
                         <div class="card-panel">
                             <p>Los Modelos de Lenguaje Extensos (LLM) como <a href="https://gemini.google.com/" target="_blank">Gemini 2.5 Pro</a>, ChatGPT-4, o Claude pueden generar código HTML, CSS y JavaScript a partir de descripciones en lenguaje natural (prompts). Esto abre la puerta a la creación de:</p>
                             <ul>
@@ -308,7 +308,7 @@ Usa un diseño visualmente atractivo con temática espacial."
                             <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8Y29kaW5nfGVufDB8fDB8fHww&auto=format&fit=crop&w=800&q=60" alt="Código en una pantalla" class="responsive-img materialboxed" style="margin-top: 15px;">
                         
                             <h3 style="color: #00695c; margin-top: 30px; border-top: 1px solid #b2dfdb; padding-top:20px;">
-                                <i class="material-icons" style="vertical-align: middle; margin-right: 8px;">play_circle_filled</i>Casos prácticos de creación web con IA
+                                <i class="material-icons" style="vertical-align: middle; margin-right: 8px;">play_circle_filled</i>Casos prácticos de creación de contenido interactivo con IA
                             </h3>
                             <p>A continuación, se presentan algunos ejemplos de contenido web interactivo generado completamente a partir de prompts (instrucciones) dados a diferentes modelos de Inteligencia Artificial generativa. Estos casos ilustran cómo, con la instrucción adecuada, la IA puede asistir en la creación rápida de herramientas educativas.</p>
                     
