fix: update campus name

--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@ En resumen, busco una herramienta visual y práctica para que mis estudiantes pu
                             <p><strong>Autor:</strong> Alberto Femenías Hermida</p>
                             <hr style="border-top: 1px solid #eee; margin: 20px 0;">
                             <p style="font-size: 0.9em; color: #555;">
-                                <small>Trabajo de fin de máster presentado en la Facultad de Formación del Profesorado del Campus de Santiago de la Universidad de Santiago de Compostela para la obtención del Máster Universitario en Profesorado de Educación Secundaria Obligatoria y Bachillerato, Formación Profesional y Enseñanza de Lenguas.</small>
+                                <small>Trabajo de fin de máster presentado en la Facultad de Ciencias de la Educación (Campus Vida) de la Universidad de Santiago de Compostela para la obtención del Máster Universitario en Profesorado de Educación Secundaria Obligatoria y Bachillerato, Formación Profesional y Enseñanza de Lenguas.</small>
                             </p>
                         </div>
                     </section>
