fix: update tfm title

--- a/index.html
+++ b/index.html
@@ -501,9 +501,9 @@ En resumen, busco una herramienta visual y práctica para que mis estudiantes pu
                             <p style="margin-left: 20px;"><em>Itinerario en Ciencias Experimentales</em></p>
                             <hr style="border-top: 1px solid #eee; margin: 20px 0;">
                             <p style="font-size: 1.2em;"><strong>Trabajo de fin de máster</strong></p>
-                            <p>Uso de herramientas de IA generativas como asistentes para el profesorado de educación secundaria.</p>
-                            <p><em>Uso de ferramentas de IA xerativas como asistentes para o profesorado de educación secundaria.</em></p>
-                            <p><em>Use of generative AI tools as assistants for secondary education teachers.</em></p>
+                            <p>Uso de herramientas de Inteligencia Artificial generativas como asistentes para el profesorado de Educación Secundaria Obligatoria.</p>
+                            <p><em>Uso de ferramentas de Intelixencia Artificial xerativas como asistentes para o profesorado de Educación Secundaria Obrigatoria..</em></p>
+                            <p><em>Use of generative Artificial Intelligence tools as assistants for secondary education teachers..</em></p>
                             <hr style="border-top: 1px solid #eee; margin: 20px 0;">
                             <p><strong>Mayo de 2025</strong></p>
                             <p><strong>Dirección:</strong> Dra. Silvia López Gómez</p>
