fix: remove title typos

--- a/index.html
+++ b/index.html
@@ -502,8 +502,8 @@ En resumen, busco una herramienta visual y práctica para que mis estudiantes pu
                             <hr style="border-top: 1px solid #eee; margin: 20px 0;">
                             <p style="font-size: 1.2em;"><strong>Trabajo de fin de máster</strong></p>
                             <p>Uso de herramientas de Inteligencia Artificial generativas como asistentes para el profesorado de Educación Secundaria Obligatoria.</p>
-                            <p><em>Uso de ferramentas de Intelixencia Artificial xerativas como asistentes para o profesorado de Educación Secundaria Obrigatoria..</em></p>
-                            <p><em>Use of generative Artificial Intelligence tools as assistants for secondary education teachers..</em></p>
+                            <p><em>Uso de ferramentas de Intelixencia Artificial xerativas como asistentes para o profesorado de Educación Secundaria Obrigatoria.</em></p>
+                            <p><em>Use of generative Artificial Intelligence tools as assistants for secondary education teachers.</em></p>
                             <hr style="border-top: 1px solid #eee; margin: 20px 0;">
                             <p><strong>Mayo de 2025</strong></p>
                             <p><strong>Dirección:</strong> Dra. Silvia López Gómez</p>
